<resources>
    <string name="app_name">cafeteria</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="_zero">0</string>
    <string name="beverages">BEVERAGES</string>
    <string name="breakfast">BREAKFAST</string>
    <string name="dessetr">DESSETR</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="order">ORDER</string>
    <string name="select_items">Select items!!</string>
    <string name="burger">Burger</string>
    <string name="_120">120 ₹</string>
    <string name="take_away">Take-Away</string>
    <string name="dine_in">Dine-in</string>
    <string name="delivery">Delivery</string>
    <string name="garlic_bread">Garlic Bread</string>
    <string name="_149">149 ₹</string>
    <string name="bean_nachos">Bean Nachos</string>
    <string name="_249">249 ₹</string>
    <string name="greek_salad">Greek Salad</string>
    <string name="_329">329 ₹</string>
    <string name="milk_cake">Milk Cake</string>
    <string name="_75">75 ₹</string>
    <string name="lemon_tea">Lemon Tea</string>
    <string name="green_tea">Green Tea</string>
    <string name="colddrinks">ColdDrinks</string>
    <string name="_37">37 ₹</string>
    <string name="_15">15 ₹</string>
    <string name="_25">25 ₹</string>
    <string name="apple_crisp">Apple Crisp</string>
    <string name="cappucchino">Cappucchino</string>
    <string name="_234">234 ₹</string>
    <string name="_150">150 ₹</string>
</resources>